<resources>
    <string name="app_name">MainActivity</string>
    <string name="streak">Streak</string>
    <string name="history">History</string>
    <string name="motivation">Motivation</string>
    <string name="log_urge_relapse">Log Urge/Relapse</string>
    <string name="settings">Settings</string>
    <string name="serviceDescription">NoFapTimer</string>
    <string name="Preferences_File_Key">com.saleef.temperedvolition.PreferenceKey</string>
    <string name="Channel_ID">channel_id</string>
    <string name="relapsed">Relapsed?</string>
    <string name="leave_a_reason_short_note">Leave a reason/short note...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_0_days">0 days</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="best_streak_0_days">Best Streak: 0 Days</string>
    <string name="gimme_another">Gimme Another</string>
    <string name="refresh">Refresh</string>
</resources>